--- a/高级概念/备份还原.md
+++ b/高级概念/备份还原.md
@@ -3,11 +3,11 @@
 如果是MyISAM的数据库引擎，那么直接复制相应的数据库文件即可。  
 如果是InnoDB则需要利用命令。这也是更为一般的普适方法。
 
-利用MySQL提供的工具（命令）———— **mysqldump**
->该部分内容不属于MySQL的SQL语法的部分
+利用MySQL提供的工具———— **mysqldump**
 
 ##mysqldump
-   mysqldump -uroot -p database_name [table_name1,...] >pathname.sql
+
+    mysqldump -uroot -p database_name [table_name1,...] >pathname.sql
 
 ###备份数据库
 使用时需指定用户名，并使用-p选项，再回车后键入密码。实际上是利用的[重定向](#重定向)来生成一个sql脚本文件。  
@@ -27,13 +27,9 @@
 还原
 ====
 将备份的sql脚本文件执行。
-在mysql提示符下，使用source命令（与mysqldump不同，source非独立命令）来执行sql脚本。  
+在mysql提示符下，使用source命令（与mysqldump不同，source不是独立工具，而是MySQL内部命令）来执行sql脚本。  
 需要先创建一个数据库，然后切换到给数据库，再执行该命令。
-```mysql
-mysql>source d:/tool/world.sql
+``` 
+mysql> source d:/tool/world.sql
 ```
 
-
------------------
-###重定向
-Linux和Windows都支持`>`来将标准输出写入文件中，此即为 **重定向**。
