--- a/高级概念/存储引擎.md
+++ b/高级概念/存储引擎.md
@@ -3,7 +3,7 @@
 存储引擎是基于表的，不是基于数据库的。
 
 |功能|MyISAM|InnoDB|Memory|Archive|
-|------|------------|-----------|-----------|------------
+|------|:----:|:----:|:----:|:----:
 |存储限制|256T|64T |有  |无
 |事务安全|-   |支持|-   |-
 |索引支持|支持|支持|支持|-
@@ -11,4 +11,4 @@
 |数据压缩|支持|-   |-   |支持
 |外键    |-   |支持|-   |-
 
-另外还有许多存储引擎。
+以上是常用引擎，另外还有其他存储引擎。
