权限管理，用户管理

--- a/SQL/插入记录.md
+++ b/SQL/插入记录.md
@@ -2,7 +2,7 @@
 =======
 共有三种Insert语句。
 ##INSERT
-```mysql
+```sql
 INSERT [INTO] tb_name [(col_name,.....)] {VALUE|VALUES} ({expr|DEFAULT},...) (...),...
 ```
 * values是标准SQL关键字，value是MySQL自己的。    
@@ -14,31 +14,31 @@ INSERT [INTO] tb_name [(col_name,.....)] {VALUE|VALUES} ({expr|DEFAULT},...) (..
 
 ###默认值
 在创建数据表的时候可以设置DEFAUTL。
-```mysql
+```sql
 CREATE TABLE users(
-id SAMLLINT UNSIGNED PRIMARY KEY AUTO_INCREMENT,
-username SAMLLINT VARCHAR(20) NOT NULL,
-password SAMLLINT VARCHAR(20) NOT NULL,
-age TINYINT UNSIGNED NOT NULL DEFAULT 10,
-sex BOOLEAN
+	id SAMLLINT UNSIGNED PRIMARY KEY AUTO_INCREMENT,
+	username SAMLLINT VARCHAR(20) NOT NULL,
+	password SAMLLINT VARCHAR(20) NOT NULL,
+	age TINYINT UNSIGNED NOT NULL DEFAULT 10,
+	sex BOOLEAN
 );
 ```
 INSERT的时候如果为自动编号的字段（比如上表中主键id）赋值的话，可写作NULL，或DEFAULT就会采用默认值。    
 如果字段设置了DEFAULT（比如上表中age），那么值直接写DEFAULT就行，注意此时，不能为NULL。例如：
-```mysql
+```sql
 INSERT users VALUES(NULL,'TOM','123',DEFAULT,1);
 ```
 ##INSERT...SET
-```mysql
+```sql
 INSERT [INTO] tb_name SET col_name={expr|DEFAULT},...
 ```
 采用了[子查询](子查询.md)。例如，上表中插入：
-```mysql
+```sql
 INSERT users SET username='Ben',password='456';
 ```
 因为id，和age都有默认值，所以可以不写。而sex允许为空，也可以不写。
 ##INSERT...SELECT*
 将查找的结果写入记录中。
-```mysql
+```sql
 INSERT test(username) SELECT username FROM users WHERE age >=30;
 ```
