--- a/SQL/查询.md
+++ b/SQL/查询.md
@@ -5,7 +5,7 @@
     SELECT 3*9
  
 ##查询记录
-```mysql
+```sql
 SELECT select_expr [,select_expr ...]
 [
 	FROM table_references
@@ -17,21 +17,21 @@ SELECT select_expr [,select_expr ...]
 ]
 ```
 ###别名
-```mysql
+```sql
 SELECT id AS userId，username AS uname FROM users;
 ```
 查询出来的列名，就变成了别名。AS其实可以省略，但可能会出现问题。
-```mysql
+```sql
 SELECT id username  FROM users;
 ```
 这样会将username视作id的别名。
 ###分组GROUP BY
-```mysql
+```sql
 [GROUP BY {col_name|position} [ASC|DESC],...]
 ```
 ASC和DESC分别是升序（缺省）和降序。
 看一个脚本：
-```mysql
+```sql
 SELECT * FROM users;
 SELECT sex FROM users GROUP BY sex;
 ```
@@ -40,13 +40,13 @@ SELECT sex FROM users GROUP BY sex;
     
 ![](http://img.my.csdn.net/uploads/201410/11/1413025525_8278.png)    
 也可以使用编号代替字段名，但是这样不鼓励。比如上面的分组语句可以写成：
-```mysql
+```sql
 SELECT sex FROM users GROUP BY 1;
 ```
 后面的数字1，值得是在SELECT选取的字段中的顺序。这里只选了一个字段，当然为1。
 ####HAVING
 与GROUP BY分组联用。只对部分记录做分组操作。有两种用法，比如：
-```mysql
+```sql
 SELECT sex,age FROM users GROUP BY sex HAVING age > 35;
 SELECT sex FROM users GROUP BY sex HAVING count(id) >=2;
 ```
@@ -55,25 +55,25 @@ SELECT sex FROM users GROUP BY sex HAVING count(id) >=2;
 
 !!!Having放在group by后面
 ###排序ORDER BY
-```mysql
+```sql
 [ORDER BY {col_name|expr|position} [ASC|DESC],...]
 ```
 比如：
-```mysql
+```sql
 SELECT * FROM users ORDER BY id DESC;
 ```
 可以排序多个字段，如果第一个字段能排出结果，就不会用到第2个字段。比如：
-```mysql
+```sql
 SELECT * FROM users ORDER BY id ,id DESC;
 ```
 因为年龄age有相同的，继续排序就要用到id的降序。
 ###限制返回记录的数量LIMIT
 LIMIT有两种语法结构，第一种比较常见。
-```mysql
+```sql
 [LIMIT {[offset,] row_count|row_count OFFSET offset}]
 ```
 起始位置，偏移量
-```mysql
+```sql
 SELECT * FROM users ;
 SELECT * FROM users LIMIT 3,2;
 SELECT * FROM users LIMIT 2;
@@ -88,3 +88,4 @@ SELECT * FROM users LIMIT 2;
 在多条查询语句之间，使用`UNION`关键字会何必所有查询结果。  
 默认会去掉重复行，如果不想去掉重复行，请使用`UNION ALL`  
 需要注意的是，要联合的查询结果必须有相同的列数（列名可以不同）
+>去重效率比不去重效率低
