--- a/SQL/权限管理.md
+++ b/SQL/权限管理.md
@@ -1,8 +1,38 @@
 权限管理
 =========
-##全局级
-给一个用户（ww）分配全部的操作权限
-```mysql
-grant all privileges on *.*  to ww@'%'
+|权限范围|可用权限
+|----|----
+|表权限|`Select`, `Insert`, `Update`, `Delete`, `Create`, `Drop`, `Grant`, `References`, `Index`, `Alter`
+|列权限|'Select`, `Insert`, `Update`, `References`
+|过程权限|'Execute`, `Alter Routine`, `Grant`
+
+##授权
+```sql
+GRANT SELECT ON *.*  TO jelly@'%'
+//给一个用户（jelly）分配全部的操作权限
+GRANT ALL PRIVILEGES ON *.*  TO jelly@'%'
 ```
 %就是前面我们提到过的通配符，可以匹配0到n个字符。这里指的是该用户所登录的任何主机。
+
+##取消授权
+语法：
+```sql
+REVOKE privilege ON databasename.tablename FROM 'username'@'host';
+```
+例如：
+```sql
+REVOKE SELECT ON test.user FROM 'jelly'@'%';
+REVOKE ALL ON *.* FROM 'jelly'@'%';
+```
+>**GRANT**和**REVOKE**对于用户而言，一个是**TO**，一个是**FROM**
+
+##查看授权
+例如：
+```sql
+SHOW GRANTS FOR 'jelly'@'%'; 
+```
+##刷新权限
+```
+FLUSH PRIVILEGES
+```
+偶尔会出现，修改了操作系统表的权限，却没有及时更新的情况。可以用上述命令刷新。
