权限管理，用户管理

--- a/SQL/权限管理.md
+++ b/SQL/权限管理.md
@@ -3,8 +3,8 @@
 |权限范围|可用权限
 |----|----
 |表权限|`Select`, `Insert`, `Update`, `Delete`, `Create`, `Drop`, `Grant`, `References`, `Index`, `Alter`
-|列权限|'Select`, `Insert`, `Update`, `References`
-|过程权限|'Execute`, `Alter Routine`, `Grant`
+|列权限|`Select`, `Insert`, `Update`,`References`
+|过程权限|`Execute`, `Alter Routine`, `Grant`
 
 ##授权
 ```sql
@@ -32,7 +32,7 @@ REVOKE ALL ON *.* FROM 'jelly'@'%';
 SHOW GRANTS FOR 'jelly'@'%'; 
 ```
 ##刷新权限
-```
+```sql
 FLUSH PRIVILEGES
 ```
 偶尔会出现，修改了操作系统表的权限，却没有及时更新的情况。可以用上述命令刷新。
