--- a/SQL/修改表.md
+++ b/SQL/修改表.md
@@ -2,11 +2,11 @@
 ==========
 所有的数据表的修改SQL语句的开头都是ALTER TABLE+表名称。
 ##给表改名
-```mysql
+```sql
 ALTER TABLE tb_name RENAME {TO|AS} tb_new_name;
 ```
 另外有个写法是：
-```mysql
+```sql
 RENAME TABLE tb_name TO tb_new_name; 
 ```
 这句可以批量修改多个表的名称。
@@ -14,65 +14,67 @@ RENAME TABLE tb_name TO tb_new_name;
 
 ##添加/删除列
 ###插入列
-```mysql
+```sql
 ALTER TABLE tb_name ADD [COLUMN] col_name column_definition [FIRST|AFTER col_name];
 ```
 默认会插入到表的最下面，指定FIRST，则置于最上面，或者用`AFTER col_name` 指定为`col_name`的下面。 ###删除列
-```mysql
+```sql
 ALTER TABLE tb_name DROP col_name,DROP.....; 
 ```
 可以一次性删除多个列。
 ##修改列
 ###修改列定义
 即修改列的属性。
-```mysql
+```sql
 ALTER TABLE tb_name MODIFY col_name column_definition [FIRST|AFTER col_name];
 ```
 比如：
-```mysql
+```sql
 ALTER TABLE test ADD id SMALLINT unsigned KEY auto_increment first;
 ```
 key可以表示主键，无需primary。fitrst表示插入的位置。
+>如果要修改的列已经是`主键`了，则修改列定义的时候再加上`主键`字段会报错。
+
 ###修改列名
-```mysql
+```sql
 ALTER TABLE tb_name CHANGE col_name col_new_name column_definition [FIRST|AFTER col_name];
 ```
 修改列名时，新列名后面要指明数据类型。
 ##修改约束
 ###PRIMARY KEY
 添加主键约束
-```mysql
+```sql
 ALTER TABLE tb_name ADD [CONSTRAIN[symbol]] PRIMARY KEY [index.type] (index_col_name,.....);
 ```
 删除主键约束
-```mysql
+```sql
 ALTER TABLE tb_name DROP [index.type] PRIMARY KEY;
 ``` 
 不需要指定列名，因为每个表只有一个主键。   
 注意！只有一个主键并不意味着主键只有一列。
 ###UNIQUE
 添加唯一约束
-```mysql
+```sql
 ALTER TABLE tb_name ADD [index.type] unique(col_name);
 ```
 删除唯一约束
-```mysql
+```sql
 ALTER TABLE tb_name DROP [index.type] unique(col_name);
 ```
 ###DEFAULT
-```mysql
+```sql
 ALTER TABLE tb_name ALTER [COLUMN] col_name {SET DEFAULT literal|DROP DEFAULT};
 for example:
 ALTER TABLE users ALTER age SET DEFAULT 20;
 ```
 ###FOREIGN KEY
 添加外键约束
-```mysql
+```sql
 ALTER TABLE tb_name ADD [CONSTRAIN[symbol]] FOREIGN KEY [index_name](index_col_name,...)reference_definition;
 for example:
 ALTER TABLE users add FOREIGN KEY (pid) REFERENCE provinces (id);
 ```
 删除外键约束
-```
+```sql
 ALTER TABLE tb_name DROP FOREIGN KEY fk_symbol;
 ```
