--- a/SQL/聚合函数.md
+++ b/SQL/聚合函数.md
@@ -13,5 +13,8 @@
 * 优先级
 	* 聚合函数优先级小于WHERE语句，不能用来WHERE后面。
 	* 聚合函数优先级大于HAVING，可以用在HAVING后面。
-   
 
+##COUNT
+- COUNT(*)统计null
+- COUNT(字段)不统计null
+- COUNT(1)可统计
