--- a/接口编程/01 连接数据库.md
+++ b/接口编程/01 连接数据库.md
@@ -25,6 +25,7 @@ con = driver->connect("tcp://127.0.0.1:3306", "root", "password");
 三个参数分别是mysql的ip和端口，用户名以及密码。
 ###Connection类
 |主要成员函数|返回值|说明
+|setSchema()|void|切换到指定数据库（参数为数据库名）
 |isValid()|bool|连接是否有效
 |reconnect()|bool|如果连接中断则重连
 
