增加一种还原sql脚本的方案
就是在mysql命令行外部，即shell中执行mysql命令来执行sql脚本

--- a/高级概念/备份还原.md
+++ b/高级概念/备份还原.md
@@ -15,21 +15,28 @@
 
 重定向符号后面的是sql文件的路径。Linux请使用`/`来表示目录结构。Windows可以用`\` 也可以用 `/`。  
 比如：
-* Linux
-  * **mysqldump -uroot -p world >/home/jelly/documet/world.sql**
-* Windows
-  * **mysqldump -uroot -p world >d:/tool/world.sql**
-  * **mysqldump -uroot -p world >d:\tool\world.sql**
+####Linux
+
+    mysqldump -uroot -p world >/home/jelly/config/world.sql
+####Windows
+
+    mysqldump -uroot -p world >d:/config/world.sql
+    mysqldump -uroot -p world >d:\config\world.sql**
 
 ###备份部分表
 如果不想备份整个数据库，而是像备份某个表，那么在数据库后面指定表的名称。
 
 还原
 ====
-将备份的sql脚本文件执行。
-在mysql提示符下，使用source命令（与mysqldump不同，source不是独立工具，而是MySQL内部命令）来执行sql脚本。  
+执行已备份的sql脚本文件。有两种方案：
+##已连接数据库时
+登录mysql命令行，使用source命令（与mysqldump不同，source不是独立工具，而是MySQL内部命令）来执行sql脚本。  
 需要先创建一个数据库，然后切换到给数据库，再执行该命令。
-``` 
-mysql> source d:/tool/world.sql
-```
+
+    mysql> source d:/tool/world.sql
+
+##未连接数据库时
+直接在shell的命令行执行：
+
+    mysql -uroot -p < /home/jelly/config/world.sql
 
