修改列顺序

--- a/SQL/修改表.md
+++ b/SQL/修改表.md
@@ -17,7 +17,8 @@ RENAME TABLE tb_name TO tb_new_name;
 ```sql
 ALTER TABLE tb_name ADD [COLUMN] col_name column_definition [FIRST|AFTER col_name];
 ```
-默认会插入到表的最下面，指定FIRST，则置于最上面，或者用`AFTER col_name` 指定为`col_name`的下面。 ###删除列
+默认会插入到表的最下面，指定FIRST，则置于最上面，或者用`AFTER col_name` 指定为`col_name`的下面。 
+###删除列
 ```sql
 ALTER TABLE tb_name DROP col_name,DROP.....; 
 ```
@@ -40,6 +41,14 @@ key可以表示主键，无需primary。fitrst表示插入的位置。
 ALTER TABLE tb_name CHANGE col_name col_new_name column_definition [FIRST|AFTER col_name];
 ```
 修改列名时，新列名后面要指明数据类型。
+###修改列顺序
+其实同上，具体比如：
+```sql
+ALTER TABLE `user` CHANGE `join_time` `join_time` DATE NULL DEFAULT NULL AFTER `role`;
+```
+把join_time列放到role列后面。
+
+
 ##修改约束
 ###PRIMARY KEY
 添加主键约束
