--- a/接口编程/01 连接数据库.md
+++ b/接口编程/01 连接数据库.md
@@ -1,35 +1,35 @@
-Á¬½ÓÊı¾İ¿â
+è¿æ¥æ•°æ®åº“
 ===========
-##Í·ÎÄ¼ş
+## å¤´æ–‡ä»¶
 ```cpp
-#include <mysql_driver.h>     // Çı¶¯Àà
-#include <mysql_connection.h> // Á¬½ÓÀà
+#include <mysql_driver.h>     // é©±åŠ¨ç±»
+#include <mysql_connection.h> // è¿æ¥ç±»
 ```
-##Çı¶¯
-¼ÓÔØÇı¶¯ÊÇÃ¿¸ömysql½Ó¿Ú±à³ÌµÄ»ù´¡¡£
+## é©±åŠ¨
+åŠ è½½é©±åŠ¨æ˜¯æ¯ä¸ªmysqlæ¥å£ç¼–ç¨‹çš„åŸºç¡€ã€‚
 ```cpp
 sql::mysql::MySQL_Driver *driver;
 
 driver = sql::mysql::get_mysql_driver_instance();
 ```
-> error: ¡®get_mysql_driver_instance¡¯ is not a member of ¡®sql::mysql::MySQL_Driver¡¯  
->>ÔÚ¹Ù·½½Ì³ÌÖĞ£¬´úÂëÊÇÕâÑù£º`dirver = sql::mysql::MySQL_Driver::get_mysql_driver_instance();`  
-ÆäÊµ¸Ãº¯Êı²»ÔÚMySQL_DriverÀàÖĞ¡£Çë×¢Òâ¡£Èç¹û°´½Ì³ÌÖĞĞ´ÁË£¬¾Í»á³öÏÖÉÏÊö´íÎó¡£
+> error: â€˜get_mysql_driver_instanceâ€™ is not a member of â€˜sql::mysql::MySQL_Driverâ€™  
+>>åœ¨å®˜æ–¹æ•™ç¨‹ä¸­ï¼Œä»£ç æ˜¯è¿™æ ·ï¼š`dirver = sql::mysql::MySQL_Driver::get_mysql_driver_instance();`  
+å…¶å®è¯¥å‡½æ•°ä¸åœ¨MySQL_Driverç±»ä¸­ã€‚è¯·æ³¨æ„ã€‚å¦‚æœæŒ‰æ•™ç¨‹ä¸­å†™äº†ï¼Œå°±ä¼šå‡ºç°ä¸Šè¿°é”™è¯¯ã€‚
 
-##Á¬½ÓÊı¾İ¿â
+## è¿æ¥æ•°æ®åº“
 ```cpp
 sql::Connection *con;
 
 con = driver->connect("tcp://127.0.0.1:3306", "root", "password");
 ```
-Èı¸ö²ÎÊı·Ö±ğÊÇmysqlµÄipºÍ¶Ë¿Ú£¬ÓÃ»§ÃûÒÔ¼°ÃÜÂë¡£
-###ConnectionÀà
-|Ö÷Òª³ÉÔ±º¯Êı|·µ»ØÖµ|ËµÃ÷
-|setSchema()|void|ÇĞ»»µ½Ö¸¶¨Êı¾İ¿â£¨²ÎÊıÎªÊı¾İ¿âÃû£©
-|isValid()|bool|Á¬½ÓÊÇ·ñÓĞĞ§
-|reconnect()|bool|Èç¹ûÁ¬½ÓÖĞ¶ÏÔòÖØÁ¬
+ä¸‰ä¸ªå‚æ•°åˆ†åˆ«æ˜¯mysqlçš„ipå’Œç«¯å£ï¼Œç”¨æˆ·åä»¥åŠå¯†ç ã€‚
+### Connectionç±»
+|ä¸»è¦æˆå‘˜å‡½æ•°|è¿”å›å€¼|è¯´æ˜
+|setSchema()|void|åˆ‡æ¢åˆ°æŒ‡å®šæ•°æ®åº“ï¼ˆå‚æ•°ä¸ºæ•°æ®åº“åï¼‰
+|isValid()|bool|è¿æ¥æ˜¯å¦æœ‰æ•ˆ
+|reconnect()|bool|å¦‚æœè¿æ¥ä¸­æ–­åˆ™é‡è¿
 
-##Demo
+## Demo
 ```cpp
 #include <iostream>
 
@@ -55,6 +55,6 @@ int main()
     }
 
     delete con;
-	// driver²»ĞèÒªÏÔÊ½delete£¬Connection¶ÔÏó»áĞ¡ĞÄÊÍ·ÅËü
+	// driverä¸éœ€è¦æ˜¾å¼deleteï¼ŒConnectionå¯¹è±¡ä¼šå°å¿ƒé‡Šæ”¾å®ƒ
 }
 ```
